--- a/src/main/AndroidManifest.xml
+++ b/src/main/AndroidManifest.xml
@@ -6,6 +6,13 @@
 
   <application android:name=".SampleApplication">
 
+    <activity android:name=".SampleActivity">
+      <intent-filter>
+        <action android:name="android.intent.action.MAIN" />
+        <category android:name="android.intent.category.LAUNCHER" />
+      </intent-filter>
+    </activity>
+
     <activity android:name=".SampleRxActivity">
       <intent-filter>
         <action android:name="android.intent.action.MAIN" />
@@ -14,5 +21,5 @@
     </activity>
 
   </application>
-  
+
 </manifest>
