--- a/build.gradle
+++ b/build.gradle
@@ -36,7 +36,7 @@ android {
   buildToolsVersion "19.1.0"
 
   defaultConfig {
-    minSdkVersion 10
+    minSdkVersion 14
     targetSdkVersion 19
   }
 }
@@ -45,7 +45,7 @@ import javax.lang.model.element.Modifier
 import static com.stanfy.helium.handler.codegen.java.entity.Writers.*;
 
 helium {
-  specification(file('src/api/twitter.api')) {
+  specification(file('src/main/api/twitter.api')) {
     sourceGen {
       entities {
         options {
