--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,14 @@
 buildscript {
   repositories {
     mavenCentral()
-    maven { url 'https://oss.sonatype.org/content/repositories/snapshots' }
   }
   dependencies {
-    classpath 'com.stanfy.helium:gradle-plugin:0.4.1-SNAPSHOT'
-    classpath 'com.android.tools.build:gradle:0.11.1'
+    classpath 'com.stanfy.helium:gradle-plugin:0.5.0'
+    classpath 'com.android.tools.build:gradle:0.12.1'
   }
 }
 
-apply plugin: 'android'
+apply plugin: 'com.android.application'
 apply plugin: 'helium-android'
 apply from: 'https://gist.githubusercontent.com/roman-mazur/95c7f46b66c7f15fb97a/raw/36051179b3cbefc7d3bbcffd49422a2f9f7e92fd/apt.gradle'
 
@@ -19,14 +18,18 @@ repositories {
 }
 
 dependencies {
+  // we interact with Twitter via Retrofit (interface generated with Helium)
   compile 'com.google.code.gson:gson:2.2.4'
   compile 'com.squareup.retrofit:retrofit:1.6.0'
 
+  // we control fetching data from Twitter via a Loader
   compile 'com.stanfy.enroscar:enroscar-async:1.0-SNAPSHOT'
   provided 'com.stanfy.enroscar:enroscar-async-compiler:1.0-SNAPSHOT'
 
+  // fetch operations are run within a Service context
   compile 'com.stanfy.enroscar:enroscar-goro:2.0.0@aar'
 
+  // and do Loader interactions with RxJava
   compile 'com.netflix.rxjava:rxjava-core:0.19.1'
   compile 'com.stanfy.enroscar:enroscar-async-rx:1.0-SNAPSHOT@aar'
 }
