--- a/build.gradle
+++ b/build.gradle
@@ -4,13 +4,14 @@ buildscript {
   }
   dependencies {
     classpath 'com.stanfy.helium:gradle-plugin:0.5.3'
-    classpath 'com.android.tools.build:gradle:0.12.2'
+    classpath 'com.android.tools.build:gradle:0.13.2'
+    classpath 'com.stanfy.android:gradle-android-apt:1.0.0'
   }
 }
 
 apply plugin: 'com.android.application'
 apply plugin: 'helium-android'
-apply from: 'https://gist.githubusercontent.com/roman-mazur/95c7f46b66c7f15fb97a/raw/36051179b3cbefc7d3bbcffd49422a2f9f7e92fd/apt.gradle'
+apply plugin: 'com.stanfy.android.apt'
 
 repositories {
   mavenCentral()
@@ -18,20 +19,21 @@ repositories {
 }
 
 dependencies {
+  compile 'com.android.support:support-v4:20.0.0'
+  compile 'com.netflix.rxjava:rxjava-core:0.20.4'
+
   // we interact with Twitter via Retrofit (interface generated with Helium)
   compile 'com.google.code.gson:gson:2.2.4'
-  compile 'com.squareup.retrofit:retrofit:1.6.0'
+  compile 'com.squareup.retrofit:retrofit:1.6.1'
 
   // we control fetching data from Twitter via a Loader
-  compile 'com.stanfy.enroscar:enroscar-async:1.0.0'
-  provided 'com.stanfy.enroscar:enroscar-async-compiler:1.0.0'
+  compile 'com.stanfy.enroscar:enroscar-async:2.0-RC1@aar'
+  provided 'com.stanfy.enroscar:enroscar-async-compiler:2.0-RC1'
+  // and do Loader interactions with RxJava
+  compile 'com.stanfy.enroscar:enroscar-async-rx:2.0-RC1@aar'
 
   // fetch operations are run within a Service context
   compile 'com.stanfy.enroscar:enroscar-goro:2.0.0@aar'
-
-  // and do Loader interactions with RxJava
-  compile 'com.netflix.rxjava:rxjava-core:0.19.1'
-  compile 'com.stanfy.enroscar:enroscar-async-rx:1.0.0'
 }
 
 android {
