--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,5 @@ android:
 before_install:
   - export TERM=dumb
 
-install:
-  - gradlew assemble
-
 script:
-  - gradlew build
+  - ./gradlew build
